[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/objects/ExtrasScreen/ExtrasScreen.gd" type="Script" id=2]
[ext_resource path="res://scenes/objects/ExtrasScreen/GhostModeButton.gd" type="Script" id=3]

[node name="ExtrasScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -190, -120 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 80.0
margin_right = 240.0
margin_bottom = -120.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZeroDeathsModeButton" type="Button" parent="VBoxContainer"]
margin_right = 752.0
margin_bottom = 16.0
text = "Zero Deaths Mode"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GhostModeButton" type="Button" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 752.0
margin_bottom = 57.0
text = "Ghost Mode (unlocks when you complete the game)"
align = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = -56.0
margin_right = 500.0
margin_bottom = -40.0
text = "back"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ZeroDeathsModeButton" to="." method="_on_ZeroDeathsModeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GhostModeButton" to="." method="_on_GhostModeButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
